WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295039
[JSC] Adhoc prototype properties folding should fail for poly proto
https://bugs.webkit.org/show_bug.cgi?id=295039
Summary
[JSC] Adhoc prototype properties folding should fail for poly proto
Yusuke Suzuki
Reported
2025-06-26 10:24:34 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2025-06-26 10:24:35 PDT
<
rdar://problem/154409593
>
Yusuke Suzuki
Comment 2
2025-06-26 10:25:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47247
EWS
Comment 3
2025-06-26 12:22:42 PDT
Committed
296676@main
(f0b058b6869b): <
https://commits.webkit.org/296676@main
> Reviewed commits have been landed. Closing PR #47247 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug