[JSC] Adhoc prototype properties folding should fail for poly proto https://bugs.webkit.org/show_bug.cgi?id=295039 rdar://154409593

Reviewed by Keith Miller.

We should stop using adhoc prototype properties folding when we
encounter a poly proto.

* Source/JavaScriptCore/bytecode/GetByStatus.cpp:
(JSC::GetByStatus::computeFor):

Canonical link: https://commits.webkit.org/296676@main